<resources>
    <string name="app_name">Scorekeeper</string>
    <string name="plus_t1">plus_t1</string>
    <string name="plus_t2">plus_t2</string>
    <string name="minus_t2">minus_t2</string>
    <string name="team1">Team1</string>
    <string name="team_2">Team 2</string>
    <string name="textview">TextView</string>
    <string name="score_t2">Score_t2</string>
    <string name="score_t1">Score_t1</string>
    <string name="minus_t1">minus_t1</string>
    <string name="plus_button">plus_button</string>
    <string name="minus_button">minus_button</string>
    <string name="night_mode">Night Mode</string>
    <string name="day_mode">Day Mode</string>
</resources>
