<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <TextView
            android:id="@+id/Score_t1"
            style="@style/ScoreText"
            android:layout_marginStart="92dp"
            android:layout_marginLeft="92dp"
            android:layout_marginTop="96dp"
            android:text="@string/score_t1"
            app:layout_constraintStart_toEndOf="@+id/imageButton"
            app:layout_constraintTop_toBottomOf="@+id/Team_1" />

        <ImageButton
            android:id="@+id/imageButton"
            style="@style/MinusButtons"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="160dp"
            android:contentDescription="@string/minus_button"
            android:onClick="decreaseScore"
            android:src="@drawable/minus"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageButton
            android:id="@+id/imageButton2"
            style="@style/PlusButtons"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_marginStart="96dp"
            android:layout_marginLeft="96dp"
            android:layout_marginTop="160dp"
            android:contentDescription="@string/plus_button"
            android:onClick="increaseScore"
            android:src="@drawable/plus"
            app:layout_constraintStart_toEndOf="@+id/Score_t1"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/Team_1"
            style="@style/TeamText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="179dp"
            android:layout_marginLeft="179dp"
            android:layout_marginTop="17dp"
            android:text="@string/team1"
            android:textAppearance="@style/TextAppearance.AppCompat.Headline"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <TextView
            android:id="@+id/Score_t2"
            style="@style/ScoreText"
            android:layout_marginStart="92dp"
            android:layout_marginLeft="92dp"
            android:layout_marginTop="96dp"
            android:text="@string/score_t2"
            app:layout_constraintStart_toEndOf="@+id/imageButton3"
            app:layout_constraintTop_toBottomOf="@+id/Team_2" />

        <ImageButton
            android:id="@+id/imageButton3"
            style="@style/MinusButtons"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="160dp"
            android:contentDescription="@string/minus_button"
            android:onClick="decreaseScore"
            android:src="@drawable/minus"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageButton
            android:id="@+id/imageButton4"
            style="@style/PlusButtons"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_marginStart="96dp"
            android:layout_marginLeft="96dp"
            android:layout_marginTop="160dp"
            android:contentDescription="@string/plus_button"
            android:onClick="increaseScore"
            android:src="@drawable/plus"
            app:layout_constraintStart_toEndOf="@+id/Score_t2"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/Team_2"
            style="@style/TeamText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="180dp"
            android:layout_marginLeft="180dp"
            android:layout_marginTop="16dp"
            android:text="@string/team_2"
            android:textAppearance="@style/TextAppearance.AppCompat.Headline"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</LinearLayout>